<resources>
    <string name="app_name">chatapp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="userData">User_data</string>
    <string name="userDataToken">user_token</string>
    <string name="name">Name</string>
    <string name="fab_content_desc">fab content desc</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="logout">Log out</string>
    <string name="message">Message</string>
    <string name="from">from</string>
    <string name="time">00:00 am</string>
    <string name="imageDesc">Image description</string>
    <string name="goBack">goBack</string>
    <string name="logoutMessage">Are you sure you want to log out?</string>
    <string name="notifications">Notifications</string>
    <string name="sign_up">Sign Up</string>
    <string name="search">search…</string>
    <string name="newUser">New Users</string>
    <string name="confirmPw">Confirm Password</string>
    <string name="request">Request +</string>
    <string name="pending">Pendient -</string>
    <string name="friend">Friend</string>
    <string name="recent_search">Recent</string>
    <string name="add">Add</string>
    <string name="smsNotification">#User wants to be friend</string>
    <string name="removeNotification">Remove Notification</string>
    <string name="removeNotificationMessage">Are you sure you want to delete it?</string>
    <string name="signup">New here? Sign up</string>
    <string name="pwForget">Have forgotten your password?</string>
    <string name="email_error">Email Incorrect</string>
    <string name="password_error">Password Incorrect</string>
    <string name="login_error">Email or Password might be incorrect</string>
    <string name="net_error">Something went wrong.</string>
    <string name="user_not_exist_error">User Invalid</string>
    <string name="register">Register</string>
    <string name="pickImg">Pick Image</string>
    <string name="largeLoremIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris feugiat porta purus, eget tincidunt turpis tempor et. Morbi eu commodo quam.</string>
    <string name="status">Status</string>
    <string name="myProfile">My Profile</string>
    <string name="empty">Empty</string>
    <string name="footer_text">Have fun Chatting!</string>
    <string name="welcomeTitle">Welcome</string>
    <string name="welcomeContentText">Let\'s have fun chatting with friends or you can even find new people to talk!</string>
    <string name="or">OR</string>
    <string name="welcomeToTitle">Welcome To</string>
    <string name="chats">Chats</string>
    <string name="findAfFriend">Find a friend</string>
    <string name="add_friend">Connect</string>
    <string name="btnRequest">btnRequest</string>
    <string name="statusPending">Pending</string>
</resources>