<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/notifications"
        android:title="@string/notifications"
        android:icon="@drawable/ic_notification"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/person_add_24"
        android:title="@string/profile"
        app:iconTint="@color/purple_700"
        app:showAsAction="withText" />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/settings_24"
        android:title="@string/settings"
        app:iconTint="@color/purple_700"
        app:showAsAction="withText" />
    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        app:showAsAction="withText" />
</menu>