<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ui.login.LoginFragment">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/containerLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_40"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_10"
            android:text="@string/login"
            android:textColor="@color/blue"
            android:textSize="@dimen/dimenSt_50"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_3"
            android:layout_marginEnd="@dimen/dimen_50"
            android:layout_marginBottom="@dimen/dimen_35"
            android:background="@color/blue" />

        <com.example.chatapp.componentsUi.Input
            android:id="@+id/emailContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_25"
            android:orientation="vertical"
            app:hintInput="@string/email"
            app:icon="@drawable/email_24"
            />

        <com.example.chatapp.componentsUi.Input
            android:id="@+id/pwContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:hintInput="@string/password"
            app:icon="@drawable/ic_lock_24"
            app:typeInput="password" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_35"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="@dimen/dimen_150"
                android:layout_height="wrap_content"
                android:background="@drawable/radius_corner_btn"
                android:backgroundTint="@color/blue"
                android:text="@string/signIn"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/btnLogin"
                android:layout_alignParentEnd="true"
                android:text="@string/signup"
                android:textColor="@color/indigo" />
        </RelativeLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/forgetPw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/dimen_10"
        android:text="@string/pwForget"
        android:textColor="@color/black_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>