<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.ui.LoginFragment">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:startIconDrawable="@drawable/email_24"
            android:layout_marginHorizontal="@dimen/dimen_20"
            android:layout_marginBottom="@dimen/dimen_20"
            app:startIconTint="@color/purple_700"
            app:boxCornerRadiusTopStart="@dimen/dimen_10"
            app:boxCornerRadiusBottomEnd="@dimen/dimen_10"
            app:boxCornerRadiusBottomStart="@dimen/dimen_10"
            app:boxCornerRadiusTopEnd="@dimen/dimen_10"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:startIconDrawable="@drawable/password_24"
            android:layout_marginHorizontal="@dimen/dimen_20"
            app:boxCornerRadiusTopStart="@dimen/dimen_10"
            app:boxCornerRadiusBottomEnd="@dimen/dimen_10"
            app:boxCornerRadiusBottomStart="@dimen/dimen_10"
            app:boxCornerRadiusTopEnd="@dimen/dimen_10"
            app:startIconTint="@color/purple_700"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pwInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/login"
        android:textColor="@color/white"
        android:background="@color/purple_700"
        android:layout_margin="@dimen/dimen_10"
        />

</androidx.constraintlayout.widget.ConstraintLayout>