<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_green"
    tools:context=".views.ui.login.LoginFragment">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarLogin"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/keyboard_backspace_24"
        app:navigationIconTint="@color/white" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/welcomeContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_30"
        android:layout_marginBottom="@dimen/dimen_40"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/circle3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/circle1">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/welcomeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcomeToTitle"
            android:textColor="@color/white"
            android:textSize="@dimen/dimenSt_15" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/dimenSt_40"
            android:textStyle="bold"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>


    <View
        android:id="@+id/circle1"
        android:layout_width="@dimen/dimen_100"
        android:layout_height="@dimen/dimen_100"
        android:background="@drawable/circle_shape"
        android:translationX="@dimen/dimen_40"
        app:layout_constraintBottom_toTopOf="@id/welcomeContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="@dimen/dimen_6"
        />

    <View
        android:id="@+id/circle2"
        android:layout_width="@dimen/dimen_60"
        android:layout_height="@dimen/dimen_60"
        android:layout_marginTop="@dimen/dimen_40"
        android:background="@drawable/circle_shape"
        app:layout_constraintBottom_toBottomOf="@id/welcomeContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/circle1"
        app:layout_constraintTop_toBottomOf="@id/circle1" />

    <View
        android:id="@+id/circle3"
        android:layout_width="500dp"
        android:layout_height="600dp"
        android:layout_marginTop="@dimen/dimen_40"
        android:background="@drawable/oval_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/inputsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_30"
        android:layout_marginBottom="@dimen/dimen_60"
        android:elevation="@dimen/dimen_6"
        android:orientation="vertical"
        android:padding="@dimen/dimen_5"
        app:layout_constraintTop_toTopOf="@id/circle3"
        app:layout_constraintBottom_toTopOf="@id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.example.chatapp.componentsUi.Input
            android:id="@+id/emailContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_35"
            android:orientation="vertical"
            app:colorHint="@color/gray_200"
            app:colorStroke="@color/main_green"
            app:cursorColor="@color/main_green"
            app:hintInput="@string/email"
            app:icon="@drawable/ic_mail_ic"
            app:tintIcon="@color/main_green" />

        <com.example.chatapp.componentsUi.Input
            android:id="@+id/pwContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_15"
            android:orientation="vertical"
            app:colorHint="@color/gray_200"
            app:colorStroke="@color/main_green"
            app:cursorColor="@color/main_green"
            app:hintInput="@string/password"
            app:icon="@drawable/ic_lock"
            app:tintIcon="@color/main_green"
            app:typeInput="password" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/forgetPw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/pwForget"
            android:textColor="@color/gray_200" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_40"
        android:layout_marginBottom="@dimen/dimen_30"
        android:background="@drawable/login_btn_style2"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>