<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentPadding="@dimen/dimen_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_8"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/userImage"
                android:layout_width="@dimen/dimen_40"
                android:layout_height="@dimen/dimen_40"
                android:background="@drawable/radius_corner_img"
                android:src="@drawable/person_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="@dimen/dimen_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/containerBtn"
                app:layout_constraintStart_toEndOf="@id/userImage"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/smsNotification"
                    app:layout_constraintStart_toEndOf="@id/userImage"

                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:textSize="@dimen/dimenSt_12"
                    android:textStyle="italic" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/containerBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/accept"
                    android:layout_width="@dimen/dimen_80"
                    android:layout_height="wrap_content"
                    android:background="@drawable/radius_corner_accept_btn"
                    android:paddingHorizontal="@dimen/dimen_20"
                    android:paddingVertical="@dimen/dimen_5"
                    android:text="@string/add"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/remove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_close"
                    app:tint="@color/black"
                    android:layout_marginStart="@dimen/dimen_12"
                    android:layout_gravity="center_vertical"
                    />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>